--- a/views/header.ejs
+++ b/views/header.ejs
@@ -26,3 +26,35 @@
     </div>
 </div>
 
+<div class="container">
+    <div id ="dashboard">
+        <div class="row">
+            <h3>Word Finder</h3>
+
+            <p>
+                I took every english word (over 200k words) and built a little app that will help you find words that contain specific characters.
+            </p>
+            <hr/>
+        </div>
+
+
+
+        <div class="row">
+            <p>Enter a word, use _ and ? as needed (see instructions below)</p>
+            <form method="post" action="search">
+                <% if(pattern) { %>
+                <input type="text"
+                       class="col-md-12"
+                       name="pattern"
+                       placeholder="enter pattern and press"
+                       value="<%= pattern %>"
+                />
+                <% } else { %>
+                <input type="text"
+                       class="col-md-12"
+                       name="pattern"
+                       placeholder="enter pattern and press" />
+                <% } %>
+            </form>
+        </div>
+        <hr/
